# cognee-integrations

./: README.md
.github/: core-team.txt
.github/workflows/: ci.yml
integrations/: inventory.yml
integrations/claude-agent-sdk/: .env.template  .gitignore  README.md  pyproject.toml
integrations/claude-agent-sdk/cognee_integration_claude/: __init__.py  guide.ipynb  tools.py
integrations/claude-agent-sdk/examples/: example.py  session_memory.py
integrations/claude-agent-sdk/tests/: test_smoke.py
integrations/claude-code/: README.md
integrations/claude-code/agents/: cognee-recall.md
integrations/claude-code/hooks/: hooks.json
integrations/claude-code/scripts/: _plugin_common.py  _recall_http.py  clear-transcript-context.py  cognee-remember.sh  cognee-search.sh  cognee-statusline.sh  cognee_statusline_render.py  config.py  dataset-switch.py  exit-watcher.py  idle-watcher.py  session-context-lookup.py  session-start.py  store-to-session.py  store-user-prompt.py  sync-session-to-graph.py
integrations/claude-code/skills/cognee-dataset-switch/: SKILL.md
integrations/claude-code/skills/cognee-remember/: SKILL.md
integrations/claude-code/skills/cognee-search/: SKILL.md
integrations/claude-code/skills/cognee-sync/: SKILL.md
integrations/claude-code/tests/: test_bridge_poll.py  test_dataset_switch.py  test_memory_preference.py  test_recall_http.py  test_remember_http.py  test_session_picker.py  test_sync_picker_propagation.py
integrations/codex/: README.md
integrations/codex/plugins/cognee/: README.md  hooks.json
integrations/codex/plugins/cognee/.codex-plugin/: plugin.json
integrations/codex/plugins/cognee/scripts/: _plugin_common.py  _recall_http.py  _remember_http.py  cognee-codex-hook.py  cognee-remember.sh  cognee-search.sh  cognee-statusline.sh  cognee_statusline_render.py  config.py  exit-watcher.py  idle-watcher.py  pre-compact.py  session-context-lookup.py  session-start.py  store-to-session.py  store-user-prompt.py  sync-session-to-graph.py
integrations/codex/plugins/cognee/skills/codebase/: SKILL.md
integrations/codex/plugins/cognee/skills/memory/: SKILL.md
integrations/crewai/: .env.template  .gitignore  README.md  pyproject.toml
integrations/crewai/cognee_integration_crewai/: __init__.py  tools.py
integrations/crewai/examples/: sessionized_tools_example.py  sessionized_tools_example_visualization.html  tools_example.py
integrations/crewai/examples/data/: clients.txt
integrations/google-adk/: pyproject.toml
integrations/hermes-agent/: README.md
integrations/hermes-agent/cognee_integration_hermes/: __init__.py  config.py  provider.py  schemas.py  server_bootstrap.py
integrations/hermes-agent/tests/: test_integration_concurrency.py  test_server_mode.py
integrations/langgraph/: pyproject.toml
integrations/n8n/: CHANGELOG.md  README.md  package-lock.json  package.json
integrations/n8n/credentials/: CogneeApi.credentials.ts
integrations/n8n/nodes/Cognee/: Cognee.node.ts
integrations/openclaw/: cognee-docker-compose.yaml
integrations/openclaw/skills/: README.md
integrations/openclaw/skills/falkor/: SKILL.md
integrations/openclaw/src/: client.ts  config.ts  persistence.ts  plugin.ts  scope.ts  sync.ts  types.ts
integrations/opencode/: README.md  index.ts  package-lock.json  package.json  tsconfig.json
integrations/opencode/src/: client.ts  plugin.ts  types.ts
integrations/strands/: .gitignore  README.md  pyproject.toml
integrations/strands/cognee_integration_strands/: __init__.py  tools.py
integrations/strands/examples/: example.py  session_example.py
integrations/strands/tests/: test_smoke.py
integrations/vellum-assistant/: README.md  package.json
integrations/vellum-assistant/hooks/: init.ts  post-compact.ts  post-tool-use.ts  shutdown.ts  stop.ts  user-prompt-submit.ts
integrations/vellum-assistant/scripts/: _cognee_client.py  _plugin_common.py  _recall_http.py  clear-transcript-context.py  cognee-remember.sh  cognee-search.sh  cognee-statusline.sh  cognee_statusline_render.py  config.py  exit-watcher.py  idle-watcher.py  pre-compact.py  session-context-lookup.py  session-start.py  store-to-session.py  store-user-prompt.py  sync-session-to-graph.py
integrations/vellum-assistant/skills/cognee-remember/: SKILL.md
integrations/vellum-assistant/skills/cognee-search/: SKILL.md
integrations/vellum-assistant/skills/cognee-sync/: SKILL.md
integrations/vellum-assistant/src/: bridge.ts  cognee-client.ts  exit-watcher.ts  idle-watcher.ts  plugin-common.ts  post-compact.ts  session-context-lookup.ts  session-start.ts  store-to-session.ts  store-user-prompt.ts  sync-session-to-graph.ts
integrations/vellum-assistant/tests/: test_cognee_client.py  test_memory_preference.py  test_recall_http.py  test_remember_http.py  test_session_id.py
integrations/vellum-assistant/tools/: cognee-recall.ts
n8n_workflows/cognee_skill_self_improve/: README.md
n8n_workflows/cognee_skill_self_improve/advanced/: README.md  run_n8n_action.sh  run_self_improve_skill.py  workflow.json
n8n_workflows/cognee_skill_self_improve/advanced/my_skills/code-review/: SKILL.md
n8n_workflows/cognee_skill_self_improve/beginner/: README.md  cognee_skill_workflow.json  smoke_test.sh  workflow.json
