[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognee-integration-claude"
version = "0.1.1"
description = "Cognee integration with claude-agent-sdk-python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.1.1",
    "cognee>=0.3.4,<0.5.4",
    "python-dotenv>=1.1.1",
]

[project.urls]
Homepage = "https://github.com/topoteretes/cognee-integrations/tree/main/integrations/claude-agent-sdk"
Repository = "https://github.com/topoteretes/cognee-integrations"

[tool.setuptools.packages.find]
where = ["."]
include = ["cognee_integration_claude*"]
exclude = ["examples*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.13.3",
]
